--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -4,6 +4,10 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+html {
+    font-size: 15px;
+}
+
 body {
     overflow-x: hidden;
 }
@@ -40,39 +44,18 @@ hr.star-light,
 hr.star-primary {
     margin: 25px auto 30px;
     padding: 0;
-    max-width: 250px;
+    max-width: 100px;
     border: 0;
-    border-top: solid 5px;
+    border-top: solid 2px;
     text-align: center;
-}
-
-hr.star-light:after,
-hr.star-primary:after {
-    content: "\f005";
-    display: inline-block;
-    position: relative;
-    top: -.8em;
-    padding: 0 .25em;
-    font-family: FontAwesome;
-    font-size: 2em;
 }
 
 hr.star-light {
     border-color: #fff;
 }
 
-hr.star-light:after {
-    color: #fff;
-    background-color: #18bc9c;
-}
-
 hr.star-primary {
     border-color: #2c3e50;
-}
-
-hr.star-primary:after {
-    color: #2c3e50;
-    background-color: #fff;
 }
 
 .img-centered {
@@ -93,6 +76,7 @@ header .container {
 header img {
     display: block;
     margin: 0 auto 20px;
+    max-width: 30%;
 }
 
 header .intro-text .name {
@@ -108,7 +92,31 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
+header .intro-text .social {
+    padding: 0;
+    margin: 1em 0;
+    list-style: none;
+    font-size: 1.2em;
+}
+
+header .intro-text .social li {
+    display: inline-block;
+    padding: 0;
+}
+
+.social li a { 
+    color: #FFFFFF;
+}
+
+
 @media(min-width:768px) {
+    header {
+        background-image: url('../img/header-blur.jpg');
+        background-size: 100% auto;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+    
     header .container {
         padding-top: 200px;
         padding-bottom: 100px;
@@ -180,8 +188,7 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
-    background: #18bc9c;
+    background: #f0f2f7;
 }
 
 section.success a,
@@ -203,9 +210,32 @@ section.success a.active {
     }
 }
 
+#about .info-container {
+    margin-top: 3em;
+}
+
+#about .info {
+    /*border: 1px solid black;
+    box-shadow: 1px 1px 3px #888888;*/
+    padding: 10px;
+}
+
+#about .info .info-labels {
+    float: left;
+    font-weight: bold;
+}
+    
+#about .info .info-data p:before {
+    content: ": ";
+}
+
+#about .info .fa-download {
+    margin-right: 5px;
+}
+
 #portfolio .portfolio-item {
     right: 0;
-    margin: 0 0 15px;
+    margin-bottom: 15px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
@@ -256,7 +286,7 @@ section.success a.active {
 
 @media(min-width:767px) {
     #portfolio .portfolio-item {
-        margin: 0 0 30px;
+        margin-bottom: 30px;
     }
 }
 
@@ -336,22 +366,6 @@ form .row:first-child .floating-label-form-group {
 
 footer {
     color: #fff;
-}
-
-footer h3 {
-    margin-bottom: 30px;
-}
-
-footer .footer-above {
-    padding-top: 50px;
-    background-color: #2c3e50;
-}
-
-footer .footer-col {
-    margin-bottom: 50px;
-}
-
-footer .footer-below {
     padding: 25px 0;
     background-color: #233140;
 }
