--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -19,14 +19,14 @@
                                 {{% if project.website %}}
 	                                <li>
 	                                	Website:
-	                                    <strong><a href="{{project.website}}">{{project.website}}</a></strong>
+	                                    <strong><a href="{{project.website}}" target="_blank">{{project.website}}</a></strong>
 	                                </li>
                                 {{% endif %}}
 
                                 {{% if project.source %}}
 	                                <li>
 	                                	Source:
-	                                    <strong><a href="{{project.source}}">{{project.source}}</a></strong>
+	                                    <strong><a href="{{project.source}}" target="_blank">{{project.source}}</a></strong>
 	                                </li>
                                 {{% endif %}}
 
