use new site logo

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -76,7 +76,7 @@ header .container {
 header img {
     display: block;
     margin: 0 auto 20px;
-    max-width: 30%;
+    width: 25%;
 }
 
 header .intro-text .name {
