convert main stylesheet to SASS

--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -12,7 +12,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>{{project.title}}</h2>
-                            <hr class="star-primary">
+                            <hr class="hr-primary">
                             <img src="img/portfolio/{{project.id}}.png" class="img-responsive img-centered" alt="{{project.title}} Logo">
                             {{project.content}}
                             <ul class="list-inline item-details">
