--- a/css/site.scss
+++ b/css/site.scss
@@ -326,7 +326,13 @@ footer {
       font-size: 3em;
     }
     img {
+      width: 75%;
+      margin-left: auto;
+      margin-right: auto;
       margin-bottom: 30px;
+    }
+    .modal-text {
+      text-align: left;
     }
     .item-details {
       margin: 30px 0;
@@ -366,5 +372,15 @@ footer {
   .modal-backdrop {
     display: none;
     opacity: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .portfolio-modal {
+    .modal-content {
+      h2 {
+        font-size: 2em;
+      }
+    }
   }
 }
