--- a/css/site.scss
+++ b/css/site.scss
@@ -10,11 +10,7 @@ body {
 }
 
 p {
-  font-size: 20px;
-
-  &.small {
-    font-size: 16px;
-  }
+  font-size: 1.25em;
 }
 
 a {
@@ -325,17 +321,35 @@ footer {
       margin: 0;
       font-size: 3em;
     }
+    .technologies {
+      font-size: 1.5em;
+      text-align: left;
+      li:first-child:before {
+        content: "Technologies: ";
+        font-weight: bold;
+      }
+      li:after {
+        content: ", ";
+      }
+      li:last-child:after {
+        content: "";
+      }
+    }
     img {
       width: 75%;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 30px;
     }
-    .modal-text {
+    .modal-text, .technologies {
       text-align: left;
     }
-    .item-details {
+    .details {
+      font-size: 1.25em;
       margin: 30px 0;
+      li strong:after {
+        content: ": ";
+      }
     }
   }
   .close-modal {
