--- a/css/site.scss
+++ b/css/site.scss
@@ -211,6 +211,29 @@ section {
   }
 }
 
+#resume {
+  .projects ul, .technologies ul {
+    display: inline;
+    margin: 0;
+    padding: 0;
+
+    li {
+      display: inline;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      &:after {
+        content: ", ";
+      }
+
+      &:last-child:after {
+        content: "";
+      }
+    }
+  }
+}
+
 #portfolio {
   .portfolio-item {
     right: 0;
