use sass variables and bourbon mixins

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,2 +1,7 @@
+// Colors //
+$blue: #2c3e50;
+$green: #18bc9c;
+
+
 // Fonts //
 $montserrat: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
