--- a/css/site.scss
+++ b/css/site.scss
@@ -99,6 +99,25 @@ hr {
   }
 }
 
+// Centering things (with reduced browser support)
+// Requires a relatively positioned parent
+.vertical-center {
+  position: absolute;
+  top: 50%;
+  @include transform(translateY(-50%));
+}
+.horizontal-center {
+  position: absolute;
+  left: 50%;
+  @include transform(translateX(-50%));
+}
+.absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  @include transform(translate(-50%, -50%));
+}
+
 // =========== HEADER =========== //
 
 header {
@@ -296,31 +315,29 @@ section {
       position: relative;
       margin: 0 auto;
       max-width: 400px;
+      padding: 0;
+
       .caption {
         position: absolute;
+        left: 0;
+        top: 0;
         width: 100%;
         height: 100%;
-        opacity: 0;
         background: rgba(24, 188, 156, 0.9);
-        @include transition(all ease .5s);
+        opacity: 0;
+        @include transition(opacity .5s);
+
         &:hover {
           opacity: 1;
         }
-        .caption-content {
-          position: absolute;
-          top: 50%;
-          width: 100%;
-          height: 20px;
-          margin-top: -12px;
-          text-align: center;
-          font-size: 20px;
-          color: #fff;
-          i {
-            margin-top: -12px;
-          }
-          h3, h4 {
-            margin: 0;
-          }
+
+        &:before {
+          font-family: FontAwesome;
+          content: "\f00e"; // fa-search-plus
+          display: inline-block;
+          @extend .absolute-center;
+          color: white;
+          font-size: 3em;
         }
       }
     }
