Fix markup error

--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -1,5 +1,5 @@
 {% for project in site.projects %}
-	<div class="portfolio-modal modal fade" id="{{project.id}}" tabindex="-1" role="dialog" aria-hidden="true" aria-labelled-by"{{project.id}}-title">
+	<div class="portfolio-modal modal fade" id="{{project.id}}" tabindex="-1" role="dialog" aria-hidden="true" aria-labelled-by="{{project.id}}-title">
         <div class="modal-content" role="document">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
