--- a/_includes/portfolio-items.html
+++ b/_includes/portfolio-items.html
@@ -4,7 +4,9 @@ I hate this. Must fix later.
 {% endcomment %}
 {% assign numrows = site.projects.size | divided_by: 3 | floor %}
 
-{% for project in site.projects %}
+{% assign sorted_projects = (site.projects | sort: 'order') %}
+
+{% for project in sorted_projects %}
 	{% assign projectId = project.id | split: '/' | last %}
 	{% assign colnum = forloop.index | minus: 1 | modulo: 3 %}
 	{% assign rownum = forloop.index | minus: 1 | divided_by: 3 | floor %}
