fix paths to assets

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,18 +4,18 @@
   {% include head.html %}
 
   <body id="page-top" class="index">
-    
+
     {{ content }}
-    
+
     <!-- Libraries -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/2.1.4/jquery.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js"></script>
-    <script type="text/javascript" src="js/vertical-timeline.js"></script>
-    <script type="text/javascript" src="js/cbpAnimatedHeader.js"></script>
+    <script type="text/javascript" src="/js/vertical-timeline.js"></script>
+    <script type="text/javascript" src="/js/cbpAnimatedHeader.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script type="text/javascript" src="js/freelancer.js"></script>
+    <script type="text/javascript" src="/js/freelancer.js"></script>
 
   </body>
 </html>
