--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <!-- Loading bar (http://github.hubspot.com/pace/) -->
   <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/pace.css">
+  <link rel="stylesheet" type="text/css" href="/css/pace.css">
 
   <!-- Favicon/Icon stuff for each platform (http://realfavicongenerator.net) -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/logo/apple-touch-icon-57x57.png">
@@ -34,8 +34,8 @@
   <link href="//cdn.jsdelivr.net/bootswatch/3.3.2/flatly/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/site.css" rel="stylesheet">
-  <link href="css/vertical-timeline.css" rel="stylesheet">
+  <link href="/css/site.css" rel="stylesheet">
+  <link href="/css/vertical-timeline.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css">
@@ -44,20 +44,20 @@
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
-        <!-- Google Analytics -->
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-7688784-3', 'auto');
-          ga('send', 'pageview');
-        </script>
+    ga('create', 'UA-7688784-3', 'auto');
+    ga('send', 'pageview');
+  </script>
 
-      </head>
+</head>
