--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,12 @@
     <!-- Custom Theme JavaScript -->
     <script type="text/javascript" src="/js/freelancer.js"></script>
 
+    <!-- Page-Specific JavaScript -->
+    {% if page.custom_js %}
+      {% for js_file in page.custom_js %}
+      <script src='/js/{{ js_file }}' type="text/javascript"></script>
+      {% endfor %}
+    {% endif %}
+
   </body>
 </html>
