--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,22 @@
 <head>
-  <title>Mark Monteiro</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mark Monteiro is a software engineer and web developer recently graduated from the University of Waterloo. This is his personal resume website.">
-  <meta name="author" content="Mark Monteiro">
 
   <!-- Loading bar (http://github.hubspot.com/pace/) -->
   <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/pace.css">
+
+  <!-- Google Analytics -->
+  <script>
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+    ga('create', '{{site.google_analytics_code}}', 'auto');
+    ga('send', 'pageview');
+  </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <!-- End Google Analytics -->
+
+  {% seo %}
+  <meta name="author" content="Mark Monteiro">
 
   <!-- Favicon/Icon stuff for each platform (http://realfavicongenerator.net) -->
   <link rel="apple-touch-icon" sizes="57x57" href="/img/logo/apple-touch-icon-57x57.png">
@@ -55,16 +63,4 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
-
-  <!-- Google Analytics -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-7688784-3', 'auto');
-    ga('send', 'pageview');
-  </script>
-
 </head>
