--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,6 +2,8 @@
 $blue: #2c3e50;
 $green: #18bc9c;
 
-
 // Fonts //
 $montserrat: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+
+// Fixed Dimensions //
+$header-height: 110px;
