--- a/css/site.scss
+++ b/css/site.scss
@@ -2,6 +2,7 @@
 ---
 @import "bourbon/bourbon";
 @import "variables";
+@import "mixins";
 
 // =========== GENERAL STYLING ========= //
 
@@ -54,6 +55,11 @@ hr {
   &:focus, &:active, &.active {
     outline: 0;
   }
+}
+
+// ========== PAGE LAYOUT ========= //
+#page-content {
+  margin-top: $header-height;
 }
 
 // ========== UTILITY CLASSES ========= //
@@ -118,83 +124,6 @@ hr {
   @include transform(translate(-50%, -50%));
 }
 
-// =========== HEADER =========== //
-
-header {
-  text-align: center;
-  color: #fff;
-  background: $green;
-
-  .container {
-    padding-top: 100px;
-    padding-bottom: 50px;
-  }
-
-  img {
-    display: block;
-    margin: 0 auto 20px;
-    width: 25%;
-  }
-
-  .intro-text {
-    .name {
-      display: block;
-      text-transform: uppercase;
-      font-family: $montserrat;
-      font-size: 2em;
-      font-weight: 700;
-    }
-
-    .skills {
-      font-size: 1.25em;
-      font-weight: 300;
-    }
-
-    .social {
-      padding: 0;
-      margin: 1em 0;
-      list-style: none;
-      font-size: 1.2em;
-
-      li {
-        display: inline-block;
-        padding: 0;
-
-        a {
-          color: #FFFFFF;
-          &:hover {
-            // TODO: add hover color
-          }
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 768px) {
-  header {
-    background-image: url('../img/header-blur.jpg');
-    background-size: 100% auto;
-    background-position: center center;
-    background-repeat: no-repeat;
-
-    .container {
-      padding-top: 200px;
-      padding-bottom: 100px;
-    }
-
-    .intro-text {
-      .name {
-        font-size: 4.75em;
-      }
-
-      .skills {
-        font-size: 1.75em;
-      }
-    }
-  }
-}
-
 // ============ NAVBAR =========== //
 
 .navbar {
@@ -233,217 +162,9 @@ header {
   }
 }
 
-// ========== PAGE SECTIONS ======= //
-
-section {
-  padding: 100px 0;
-  h2 {
-    margin: 0;
-    font-size: 3em;
-  }
-  &.success {
-    background: #f0f2f7;
-  }
-}
-
-@media (max-width: 768px) {
-  section {
-    padding: 75px 0;
-    &.first {
-      padding-top: 75px;
-    }
-  }
-}
-
-#about {
-  .info-container {
-    margin-top: 3em;
-  }
-  .info {
-    padding: 10px;
-
-    dl {
-      margin: 15px auto;
-      width: 350px;
-      dt { width: 100px; }
-      dd { margin-left: 120px; margin-bottom: 5px; }
-    }
-
-    .fa-download {
-      margin-right: 5px;
-    }
-  }
-}
-
-#resume {
-  .projects ul, .technologies ul {
-    display: inline;
-    margin: 0;
-    padding: 0;
-
-    li {
-      display: inline;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-
-      &:after {
-        content: ", ";
-      }
-
-      &:last-child:after {
-        content: "";
-      }
-    }
-  }
-}
-
-#portfolio {
-  .portfolio-item {
-    right: 0;
-    margin-bottom: 15px;
-    .portfolio-link {
-      display: block;
-      position: relative;
-      margin: 0 auto;
-      max-width: 400px;
-      padding: 0;
-
-      .caption {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(24, 188, 156, 0.9);
-        opacity: 0;
-        @include transition(opacity .5s);
-
-        &:hover {
-          opacity: 1;
-        }
-
-        &:before {
-          font-family: FontAwesome;
-          content: "\f00e"; // fa-search-plus
-          display: inline-block;
-          @extend .absolute-center;
-          color: white;
-          font-size: 3em;
-        }
-      }
-    }
-  }
-  * {
-    z-index: 2;
-  }
-}
-
-@media (min-width: 767px) {
-  #portfolio .portfolio-item {
-    margin-bottom: 30px;
-  }
-}
-
-footer {
+// =========== FOOTER =========== //
+#page-footer {
   color: #fff;
   padding: 25px 0;
   background-color: #233140;
-}
-
-// ============ PORTFOLIO MODAL =========== //
-
-.portfolio-modal {
-  .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
-    border-radius: 0;
-    background-clip: border-box;
-    box-shadow: none;
-    h2 {
-      margin: 0;
-      font-size: 3em;
-    }
-    .technologies {
-      font-size: 1.5em;
-      text-align: left;
-      li:first-child:before {
-        content: "Technologies: ";
-        font-weight: bold;
-      }
-      li:after {
-        content: ", ";
-      }
-      li:last-child:after {
-        content: "";
-      }
-    }
-    img {
-      width: 75%;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 30px;
-    }
-    .modal-text, .technologies {
-      text-align: left;
-    }
-    .details {
-      font-size: 1.25em;
-      margin: 30px 0;
-
-      $tagWidth: 100px;
-      dt {
-        text-align: left;
-        width: $tagWidth;
-        &:after {
-          content: ": ";
-        }
-      }
-      dd {
-        margin-left: $tagWidth + 20px;
-      }
-    }
-  }
-  .close-modal {
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    cursor: pointer;
-    &:hover {
-      opacity: .3;
-    }
-    .lr {
-      z-index: 1051;
-      width: 1px;
-      height: 75px;
-      margin-left: 35px;
-      background-color: $blue;
-      @include transform(rotate(45deg));
-      .rl {
-        z-index: 1052;
-        width: 1px;
-        height: 75px;
-        background-color: $blue;
-        @include transform(rotate(90deg))
-      }
-    }
-  }
-  .modal-backdrop {
-    display: none;
-    opacity: 0;
-  }
-}
-
-@media (max-width: 768px) {
-  .portfolio-modal {
-    .modal-content {
-      h2 {
-        font-size: 2em;
-      }
-    }
-  }
 }
