--- a/_includes/portfolio-modals.html
+++ b/_includes/portfolio-modals.html
@@ -14,7 +14,7 @@
                         <div class="modal-body">
                             <h2 id='{{projectId}}-title' class='text-center'>{{project.title}}</h2>
                             <hr class="hr-primary">
-                            <img src="img/project/{{projectId}}.png" class="img-responsive" alt="{{project.title}} Logo">
+                            <img src="img/projects/{{projectId}}.png" class="img-responsive" alt="{{project.title}} Logo">
                             <dl class="details dl-horizontal">
                                 {% if project.website %}
                                     <dt>Website</dt>
