--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,12 @@
 layout: default
 email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D
 ---
+{% if page.path == 'index.html' %}
+    {% assign navPrefix = '' %}
+{% else %}
+    {% assign navPrefix = '/index' %}
+{% endif %}
+
 <!-- Navigation -->
 <div class='nav-container'>
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -14,26 +20,26 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#page-top">Mark Monteiro</a>
+        <a class="navbar-brand" href="{{navPrefix}}#page-top">Mark Monteiro</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
           <li class="hidden">
-            <a href="#page-top"></a>
+            <a href="{{navPrefix}}#page-top"></a>
           </li>
           <li class="page-scroll">
-            <a href="#about">About</a>
+            <a href="{{navPrefix}}#about">About</a>
           </li>
           <li class="page-scroll">
-            <a href="#resume">Experience</a>
+            <a href="{{navPrefix}}#resume">Experience</a>
           </li>
           <li class="page-scroll">
-            <a href="#portfolio">Portfolio</a>
+            <a href="{{navPrefix}}#portfolio">Portfolio</a>
           </li>
           <li>
-            <a href="{{page.email_href}}" target="_blank">Contact</a>
+            <a href="{{layout.email_href}}" target="_blank">Contact</a>
           </li>
         </ul>
       </div>
