--- a/css/site.scss
+++ b/css/site.scss
@@ -60,17 +60,10 @@ hr {
 // ========== PAGE LAYOUT ========= //
 #page-content {
   margin-top: $header-height;
+  @media (max-width: $screen-sm-max) { margin-top: $header-height-sm; }
 }
 
 // ========== UTILITY CLASSES ========= //
-
-// Vertical center bootstrap columns
-// Requires removing any whitespace between cols (i.e. with <!-- -->)
-.col-vcenter {
-  float: none;
-  display: inline-block;
-  vertical-align: middle;
-}
 
 .btn-outline {
   margin-top: 15px;
@@ -91,15 +84,19 @@ hr {
   position: fixed;
   right: 2%;
   bottom: 2%;
-  width: 50px;
-  height: 50px;
+
   .btn {
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
+    $diameter: 50px;
+    width: $diameter;
+    height: $diameter;
+    text-align: center;
+    border-radius: 50%;
+    padding: 0;
     font-size: 20px;
-    line-height: 28px;
-    &:focus {
+
+    .fa {line-height: $diameter - 5px; }
+
+    &:hover, &:focus {
       outline: 0;
     }
   }
