--- a/css/vertical-timeline.scss
+++ b/css/vertical-timeline.scss
@@ -199,6 +199,39 @@
 	}
 }
 
+// Use Modernizr to check for animation support //
+html.cssanimations {
+	.cd-timeline-block {
+		.hide-timeline {
+			visibility: hidden;
+		}
+		&:nth-child(even) .cd-timeline-content.bounce-in {
+			-webkit-animation: cd-bounce-2-inverse 0.6s;
+			-moz-animation: cd-bounce-2-inverse 0.6s;
+			animation: cd-bounce-2-inverse 0.6s;
+		}
+
+		.cd-timeline-img.bounce-in {
+			visibility: visible;
+			-webkit-animation: cd-bounce-1 0.6s;
+			-moz-animation: cd-bounce-1 0.6s;
+			animation: cd-bounce-1 0.6s;
+		}
+		.cd-timeline-point.bounce-in {
+			visibility: visible;
+			-webkit-animation: cd-bounce-1 0.6s;
+			-moz-animation: cd-bounce-1 0.6s;
+			animation: cd-bounce-1 0.6s;
+		}
+		.cd-timeline-content.bounce-in {
+			visibility: visible;
+			-webkit-animation: cd-bounce-2 0.6s;
+			-moz-animation: cd-bounce-2 0.6s;
+			animation: cd-bounce-2 0.6s;
+		}
+	}
+}
+
 @media only screen and(min-width: 1170px) {
 	.cd-container {
 		margin-top: 3em;
@@ -296,40 +329,7 @@
 			}
 		}
 	}
-
-	.cssanimations {
-		.cd-timeline-block {
-			.hide-timeline {
-				visibility: hidden;
-			}
-			&:nth-child(even) .cd-timeline-content.bounce-in {
-				-webkit-animation: cd-bounce-2-inverse 0.6s;
-				-moz-animation: cd-bounce-2-inverse 0.6s;
-				animation: cd-bounce-2-inverse 0.6s;
-			}
-
-			.cd-timeline-img.bounce-in {
-				visibility: visible;
-				-webkit-animation: cd-bounce-1 0.6s;
-				-moz-animation: cd-bounce-1 0.6s;
-				animation: cd-bounce-1 0.6s;
-			}
-			.cd-timeline-point.bounce-in {
-				visibility: visible;
-				-webkit-animation: cd-bounce-1 0.6s;
-				-moz-animation: cd-bounce-1 0.6s;
-				animation: cd-bounce-1 0.6s;
-			}
-			.cd-timeline-content.bounce-in {
-				visibility: visible;
-				-webkit-animation: cd-bounce-2 0.6s;
-				-moz-animation: cd-bounce-2 0.6s;
-				animation: cd-bounce-2 0.6s;
-			}
-		}
-	}
 }
-
 
 @-webkit-keyframes cd-bounce-1 {
 	0% {
