show comments on posts by default

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: page
     {{content}}
 
     {% if page.comments %}
+    <h2>Comments</h2>
     <div class='comments-container'>
         <div id="disqus_thread"></div>
         <script>
